minikube/networking/sol47/netpol1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol
spec:
  podSelector:
    matchLabels:
      app: restricted
  policyTypes:
    - Egress

  egress:
    - to:
        - ipBlock:
            cidr: 145.133.106.121/32
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
